// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`supports nested query with compound ids 1`] = `
{
  "parent": {
    "child": {
      "idField1": 1,
      "idField2": 2,
    },
    "idField1": 1,
    "idField2": 2,
  },
}
`;

exports[`supports nested query with one id field 1`] = `
{
  "parent": {
    "child": {
      "idField": 1,
    },
    "idField": 1,
  },
}
`;

exports[`supports nested query without id but compound uniques 1`] = `
{
  "parent": {
    "child": {
      "uniqueField1": 1,
      "uniqueField2": 2,
    },
    "uniqueField1": 1,
    "uniqueField2": 2,
  },
}
`;

exports[`supports nested query without id but multiple uniques 1`] = `
{
  "parent": {
    "child": {
      "uniqueField1": 1,
      "uniqueField2": 2,
    },
    "uniqueField1": 1,
    "uniqueField2": 2,
  },
}
`;

exports[`supports nested query without id but one unique 1`] = `
{
  "parent": {
    "child": {
      "uniqueField": 1,
    },
    "uniqueField": 1,
  },
}
`;
